--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,73 @@
 .container{
+  width: 100%;
+  width: 100%;
+  margin: 0 auto;
+
+}
+
+.container h2{
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+
+
+.content{
+  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
   padding: 20px;
   
 }
-.container .Allinput{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin: 10px 0;
+
+.content .left{
+  background: transparent;
+  width: 50%;
+  padding: 20px;
 }
-.Allinput input{
-  margin: 5px 0;
-  font-size: 16px;
+.content .right{
+  width: 50%;
+  background: transparent;
+  padding: 20px;
 }
 
-.container .btn button{
+
+.desk-table{
+  width: 100%;
+}
+.Allinput input{
+  background: transparent;
+  width: 100%;
+  height: 30px;
+  margin: 5px 0;
+  padding: 5px 10px;
+  font-size: 16px;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid gray;
+  border-top: 1px solid gray;
+}
+
+.content .btn button{
   padding: 10px 10px;
-  background-color: blue;
+  background-color: #1373e0;
   color: #fff !important;
   border: none;
   margin-bottom: 10px;
   padding: 10px 50px;
-  font-size: 16px;
+  font-size: 18px;
+  border-radius: 3px;
+  margin-top: 15px;
+
   color: #000
 }
 
 
 
  table thead tr th {
-    padding: 10px;
+  padding: 10px;
   background-color: aqua;
   padding: 5px 10px;
 }
@@ -39,4 +75,19 @@
 tbody tr td{
   background-color: azure;
   padding: 5px 10px;
+}
+
+
+.delete{
+  background: red;
+  color: #fff;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.edit{
+  background: green;
+  color: #fff;
+  border-radius: 2px;
+  cursor: pointer;
 }
