--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,213 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.m-table{
+  display: flex;
+  opacity: 0;
+}
+
+
+
+
+
+@media screen and (min-width:1024px) and (max-width:1200px){
+  .content{
+    width: 100%;
+    margin: 0 auto;
+    background: green;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px;
+    
+  }
+  
+}
+
+@media screen and (min-width:769px) and (max-width:1024px){
+  .content{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px;
+    
+  }
+
+  
+  .nav{
+    width: 400px !important;
+}
+  .container{
+    width: 100%;
+  
+  }
+  
+  .container h2{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+  }
+  .content{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap !important;
+    flex-direction: column;
+    padding: 5px !important;
+  }
+
+  .content .left{
+    background: transparent;
+    width: 100% !important;
+    padding: 10px !important;
+  }
+  .content .right{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: transparent;
+    padding: 10px !important;
+  }
+
+
+}
+
+@media screen and (min-width:480px) and (max-width:769px){
+
+  .nav{
+    width: 350px !important;
+}
+  .container{
+    width: 100%;
+  
+  }
+  
+  .container h2{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  .content{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap !important;
+    flex-direction: column;
+    padding: 5px !important;
+  }
+
+  .content .left{
+    background: transparent;
+    width: 100% !important;
+    padding: 10px !important;
+  }
+  .content .right{
+    width: 100%;
+    background: transparent;
+    padding: 10px !important;
+  }
+
+  .desk-table{
+    width: 100% !important;
+    background: yellow;
+  }
+
+
+}
+
+@media screen and (min-width:0px) and (max-width:480px){
+
+  .nav{
+    width: 300px !important;
+}
+  .container{
+    width: 100%;
+  
+  }
+  
+  .container h2{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  .container{
+    width: 100%;
+    margin: 0 auto;
+  
+  }
+  
+  .container h2{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 32px;
+    font-weight: bold;
+  }
+  .content{
+    padding: 10px !important;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .content .left{
+    background: transparent;
+    width: 100% !important;
+    padding: 10px !important;
+  }
+
+
+  .content .btn button{
+    width: 100%;
+  }
+  .content .right{
+    width: 100%;
+    background: transparent;
+    padding: 10px !important;
+  }
+
+
+
+  .desk-table{
+    display: none;
+  }
+
+  
+
+  .m-table{
+    display: flex;
+    opacity: 1;
+  }
+
+
+  table thead tr th {
+    padding: 10px;
+    background-color: aqua;
+    padding: 5px 10px;
+  }
+  
+  tbody tr td{
+    background-color: azure;
+    padding: 5px 10px;
+  }
+  
+  
+  .delete{
+    background: red;
+    color: #fff;
+    border-radius: 2px;
+    cursor: pointer;
+  }
+  
+  .edit{
+    background: green;
+    color: #fff;
+    border-radius: 2px;
+    cursor: pointer;
+  }
 }
